# react-native-mmkv-storage

./: .gitignore  .gitmodules  .npmignore  .prettierrc.js  LICENSE  README.md  api.js  autoLinks.js  index.d.ts  index.js  index.ts  package-lock.json  package.json  react-native-fast-storage.podspec  react-native-mmkv-storage-0.11.0-alpha.0.tgz  react-native-mmkv-storage.podspec  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ios.yml  main.yml  npm-publish.yml
MMKV/Android/MMKV/mmkv/: build.gradle
MMKV/Core/: CMakeLists.txt  MMKV.cpp
android/: CMakeLists.txt  build.gradle
android/cpp/: cpp-adapter.cpp
android/gradle/wrapper/: gradle-wrapper.properties
android/ios/: MMKVStorage.h  MMKVStorage.mm  SecureStorage.h  SecureStorage.m
android/ios/MMKVStorage.xcodeproj/: project.pbxproj
android/src/main/: AndroidManifest.xml
android/src/main/rnmmkv/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  rnmmkv-adapter.cpp
android/src/newarch/: MmkvStorageSpec.kt
android/src/oldarch/: MmkvStorageSpec.kt
autolink/postlink/: appGradleLinker.js  applicationLinker.js  gradlePropertiesLinker.js  log.js  path.js  postLinkAndroid.js  reanimated2Linker.js  rootGradleLinker.js  run.js
docs/: README.md  _coverpage.md  _sidebar.md  asyncapi.md  callbackapi.md  creatinginstance.md  datatypes.md  encryption.md  flipper.md  generalmethods.md  gettingstarted.md  index.html  loaderclass.md  mockjest.md  queryingandindexing.md  redux-persist.md  transactionmanager.md  useindex.md  usemmkvref.md  usemmkvstorage.md  workingwithencryption.md
example/: .flowconfig  .gitignore  App.js  App.tsx  Gemfile  app.json  appcenter-post-build.sh  appcenter-post-clone.sh  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  tsconfig.json
example/__tests__/: App.test.js
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle  proguard-rules.pro
example/ios/: File.swift  Podfile
example/ios/MmkvStorageExample/: AppDelegate.mm  AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/MmkvStorageExample.xcodeproj/: project.pbxproj
example/ios/MmkvStorageExample.xcworkspace/: contents.xcworkspacedata
example/ios/MmkvStorageExampleTests/: MmkvStorageExampleTests.m
example/ios/example/: AppDelegate.mm
example/ios/example.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: Constants.h  Constants.m  Getters.h  Getters.m  IDStore.h  IDStore.m  MMKVNative.h  MMKVNative.mm  MMKVStorage.h  MMKVStorage.m  MMKVStorage.mm  RNFastStorage.h  RNFastStorage.m  RNFastStorage.podspec  SecureStorage.h  SecureStorage.m  Setters.h  Setters.m  StorageGetters.h  StorageGetters.m  StorageIndexer.h  StorageIndexer.m  StorageSetters.h  StorageSetters.m
ios/MMKV.framework/: Info.plist  MMKV
ios/MMKV.framework/Modules/: module.modulemap
ios/MMKV.framework/_CodeSignature/: CodeResources
ios/MMKVStorage.xcodeproj/: project.pbxproj
ios/RNFastStorage.xcodeproj/: project.pbxproj
ios/RNFastStorage.xcworkspace/: contents.xcworkspacedata
jest/: README.md  memoryStore.ts  mmkvJestSetup.js  tsconfig.json
src/: api.js  api.ts  encryption.js  encryption.ts  eventmanager.js  eventmanager.ts  handlers.js  handlers.ts  helpers.js  indexer.js  initializer.js  initializer.ts  keygen.js  keygen.ts  loader.js  loader.ts  mmkvinstance.ts  mmkvloader.ts  transactions.js  transactions.ts  utils.js  utils.ts
src/hooks/: constants.js  constants.ts  functions.js  functions.ts  useIndex.js  useIndex.ts  useMMKV.js  useMMKV.ts  useMMKVRef.ts
src/indexer/: arrays.js  arrays.ts  booleans.js  booleans.ts  indexer.js  indexer.ts  maps.js  maps.ts  numbers.js  numbers.ts  strings.js  strings.ts
src/mmkv/: IDStore.js  IDStore.ts  init.js  init.ts
src/module/: NativeMMKVStorage.ts  index.ts
src/module/web/: encryption.ts  index.ts
src/types/: index.ts
(+26 files in other folders)
